src/objects/Sales_Order__c.object
<CustomObject>
    <fields>
        <fullName>ALU_Order_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ALU Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_PO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Network Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer</label>
        <referenceTo>Offer__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Created__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Amount__c</fullName>
        <label>PO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Task__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SO Task</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>sales order staging</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>sales order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Orders Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>